FIX Fixed backgroundColor of the search Icon on navbar, Fixed problem when username was too long, fixed the colors to seem like amazon, Fixed subtotal design on mobile

--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -15,3 +15,12 @@
   width: 100%;
   margin-bottom: 10px;
 }
+
+@media (max-width: 500px) {
+  .checkout {
+    flex-direction: column;
+  }
+  .checkout__message__noItems {
+    font-size: 14px;
+  }
+}
