--- a/src/Login.css
+++ b/src/Login.css
@@ -59,3 +59,9 @@
   margin-top: 10px;
   border-color: darkgrey;
 }
+
+@media (max-width: 500px) {
+  .login__logo {
+    margin-top: 40px;
+  }
+}
