--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -41,6 +41,7 @@
   padding: 5px;
   height: 22px !important;
   background-color: #cd9042;
+  background-color: rgb(254, 189, 105);
 }
 
 .header__nav {
