--- a/src/Subtotal.css
+++ b/src/Subtotal.css
@@ -19,12 +19,21 @@
 }
 
 .subtotal__button {
-  background: #f0c14b;
-  border-radius: 2px;
+  padding: 8px 16px 8px;
+  background-color: rgb(255, 216, 20);
+  border-radius: 8px;
+  border: 1px solid;
+  border-color: rgb(255, 210, 0) rgb(255, 210, 0) rgb(255, 216, 20);
+  box-shadow: 0 0.2rem 0.5rem 0 rgb(213 217 217 / 50%);
+
   width: 100%;
   height: 30px;
-  border: 1px solid;
   margin-top: 10px;
-  border-color: #a88734 #9c7e31 #846a29;
   color: #111;
+}
+
+@media (max-width: 500px) {
+  .subtotal {
+    width: calc(100% - 40px);
+  }
 }
